tests/integration/error/array_assignment_non_array.alo
// expect-error: Array assignment requires array type

fun main() -> void {
    mut value: int = 1;
    value[0] = 9;
}
